fix header sizing on mobile

--- a/src/styles/components/Header.scss
+++ b/src/styles/components/Header.scss
@@ -32,7 +32,7 @@ $horiz-margin: 7vmin;
       margin: .3em auto;
     }
 
-    height: 18%;
+    height: 4.4em;
   }
 
   .title {
